--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -382,6 +382,10 @@ header {
                 transition: all 0.3s ease 0s;
                 margin-top: 25px;
                 cursor: pointer;
+
+                &:hover {
+                    background: #f75160;
+                }
             }
 
             label.play_video {
@@ -454,6 +458,10 @@ header {
         width: 48%;
         padding-bottom: 55px;
 
+        @media (max-width:786px) {
+            width: 100%;
+        }
+
         h2 {
             margin-bottom: 24px;
             position: relative;
@@ -461,6 +469,10 @@ header {
             line-height: 30px;
             font-size: 40px;
             font-weight: 600;
+
+            @media (max-width:786px) {
+                line-height: 40px;
+            }
         }
 
         p {
@@ -498,6 +510,7 @@ header {
             &:hover img {
                 box-shadow: 0 0 4px 0px rgba(0, 0, 0, 0.20);
                 border: 1px solid transparent;
+                background: #ff5f6d;
             }
 
             img {
@@ -529,6 +542,10 @@ header {
                 font-size: 14px;
                 font-weight: 400;
                 line-height: 25px;
+
+                @media (max-width:786px) {
+                    padding: 0;
+                }
             }
         }
     }
@@ -698,6 +715,196 @@ header {
         }
     }
 }
+
+/* team */
+#team {
+    padding-bottom: 70px;
+    padding-top: 128px;
+    text-align: center;
+
+    .top {
+        margin: 0 auto;
+        width: 48%;
+        padding-bottom: 55px;
+
+        @media (max-width:786px) {
+            width: 100%;
+        }
+
+        h2 {
+            margin-bottom: 24px;
+            position: relative;
+            text-transform: capitalize;
+            line-height: 30px;
+            font-size: 40px;
+            font-weight: 600;
+
+            @media (max-width:786px) {
+                line-height: 40px;
+            }
+        }
+
+        p {
+            color: #999999;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 25px;
+            margin: 0 0 15px;
+            margin-bottom: 10px;
+        }
+    }
+
+    .bottom {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 20px;
+
+        @media (max-width:786px) {
+            justify-content: center;
+        }
+
+        .team {
+            min-width: 275px;
+            max-width: 295px;
+            position: relative;
+            overflow: hidden;
+            transition: .3s;
+
+            &:hover {
+                box-shadow: 0 0 30px 0px rgba(0, 0, 0, 0.1);
+                border-radius: 10px;
+            }
+
+            &:hover img {
+                transform: scale(1.2);
+            }
+
+            &:hover div {
+                top: 50%;
+                opacity: 1;
+                visibility: visible;
+            }
+
+            img {
+                object-fit: cover;
+                transition: all 0.7s ease-in-out;
+            }
+
+
+            div {
+                position: absolute;
+                top: 40%;
+                left: 0;
+                width: 100%;
+                background: #ff5f6d;
+                padding: 22px 0 12px;
+                color: #fff;
+                transition: .3s;
+                transform: translateY(-50%);
+                opacity: 0;
+                visibility: hidden;
+
+                b {
+                    font-size: 18px;
+                    font-weight: 600;
+                    margin-bottom: .5rem;
+                }
+
+                p {
+                    font-size: 14px;
+                    margin-bottom: .5rem;
+                }
+            }
+        }
+    }
+}
+
+/* end team */
+
+/* subscribe */
+.subscribe {
+    padding-bottom: 115px;
+    padding-top: 130px;
+    text-align: center;
+    background: url("../img/bg_subscribe.webp") no-repeat;
+    background-size: cover;
+
+    .top {
+        margin: 0 auto;
+        width: 48%;
+        padding-bottom: 55px;
+
+        @media (max-width:786px) {
+            width: 100%;
+        }
+
+        h2 {
+            margin-bottom: 24px;
+            position: relative;
+            text-transform: capitalize;
+            line-height: 30px;
+            font-size: 40px;
+            font-weight: 600;
+
+            @media (max-width:786px) {
+                line-height: 40px;
+            }
+        }
+
+        p {
+            color: #999999;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 25px;
+            margin: 0 0 15px;
+            margin-bottom: 10px;
+        }
+    }
+
+    form.form_subscribe {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 20px;
+
+        .email_subscribe {
+            min-width: 280px;
+            background: transparent none repeat scroll 0 0;
+            border: 1px solid #ff5f6d;
+            border-radius: 5px;
+            box-shadow: none;
+            color: #444444;
+            font-size: 12px;
+            font-weight: normal;
+            height: 45px;
+            margin-right: 15px;
+            padding-left: 20px;
+        }
+
+        input.submit {
+            background: #ff5f6d;
+            border-radius: 4px;
+            box-shadow: 0 0 20px 0 rgba(255, 95, 109, 0.4);
+            color: #fff;
+            display: inline-block;
+            font-size: 14px;
+            font-weight: 700;
+            padding: 15px 40px;
+            text-decoration: none;
+            text-transform: uppercase;
+            transition: all 0.3s ease 0s;
+            cursor: pointer;
+
+            &:hover {
+                background: #F55160;
+            }
+        }
+    }
+}
+
+/* end subscribe */
 
 /* scroll_top */
 .scroll_top {
